Applying dropIndexes oplog entry can get BackgroundOperationInProgressForNamespace if FCV not upgraded

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0, 5.2.0-rc5
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.2
    • Execution Team 2022-01-10
    • 155
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-49866 added an invariant that if we get BackgroundOperationInProgressForNamespace applying an oplog entry, the node must be in initial sync. After SERVER-59399 this is true since we no longer assert that there are no index builds in progress on a collection in order to drop a different index on that collection. However, if the FCV is not upgraded, we actually still throw this assertion. Thus, if the FCV is not fully upgraded, attempting to apply a dropIndexes oplog entry in steady state replication can result in BackgroundOperationInProgressForNamespace if there is an active index build in progress on that collection.

            Assignee:
            Gregory Noma
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: