SERVER-62173 Wait for no index builds to be in progress on BackgroundOperationInProgressForNamespace during steady state replication with FCV less than 5.2